# RUSA-Desktop-Application

./: .gitignore  README.md  package-lock.json
.claude/: launch.json
Diagram_SUBMIT/: Main.vpp.bak_014d  Main.vpp.bak_015d  Main.vpp.bak_016d  Main.vpp.bak_017d  Main.vpp.bak_018d  Main.vpp.bak_019d  Main.vpp.bak_020d  Main.vpp.bak_021d  Main.vpp.bak_022d  Main.vpp.bak_023d  Main.vpp.bak_024d  Main.vpp.bak_025d  Main.vpp.bak_026d  Main.vpp.bak_027d  Main.vpp.bak_028d  Main.vpp.bak_029d  Main.vpp.bak_030d  Main.vpp.bak_032d  Main.vpp.bak_033d  Main.vpp.bak_034d  Main.vpp.bak_035d  Main.vpp.bak_036d  Main.vpp.bak_037d  Main.vpp.bak_038d  Main.vpp.bak_039d  Main.vpp.bak_040d  Main.vpp.bak_041d  Main.vpp.bak_042d  RUSA_UC_DESC.xlsx  RUSA_Use_Case_Description.xlsx
rusa/: .gitignore  package.json
rusa/src-tauri/: Cargo.toml  tauri.conf.json
rusa/src-tauri/src/: auth.rs  error.rs  lib.rs  main.rs  state.rs
rusa/src-tauri/src/commands/: administrator.rs  astronauts.rs  auth.rs  da_operations.rs  data_analysts.rs  directors.rs  engineers.rs  medical.rs  mod.rs  psychiatry.rs  sanitary.rs  scientists.rs  security.rs  settlers.rs  space_station.rs
src-tauri/: .env.example  Cargo.toml
src-tauri/examples/: check_tables.rs
src-tauri/src/: audit.rs  lib.rs  realtime.rs  reminders.rs  state.rs
src/lib/: routing.ts  supabase.ts
src/routes/: +layout.svelte
supabase/.temp/: pooler-url
supabase/migrations/: 20250101000000_auth_subsystem.sql  20250101000001_seed_data.sql  20250101000002_shared_and_directors.sql  20250101000004_fix_seed_types.sql  (+8 more)
(+342 files in other folders)
